--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,12 +37,12 @@ const {} = Astro.props;
                     <h3 class="text-sm font-semibold leading-6 text-brand-navy">Legal</h3>
                     <ul role="list" class="mt-6 space-y-4">
                         <li>
-                            <a href="#" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Privacy & Terms</a>
+                            <a href="/privacy" class="text-sm leading-6 text-brand-navy/80 hover:text-brand-bold">Privacy & Terms</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <p class="mt-12 text-sm text-brand-navy/60 text-center">© 2026 CryptoMondays Zürich. All rights reserved. </p>
+    <p class="mt-12 text-sm text-brand-navy/60 text-center">Copyright 2026 CryptoMondays Zurich. All rights reserved.</p>
 </footer>
